@@ -4,8 +4,10 @@ import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 
@@ -70,7 +72,7 @@ public class RequestServiceTest {
     var dayTwo = EntityBuilder.day(LocalDate.of(2018, 11, 21));
     var dayThree = EntityBuilder.day(LocalDate.of(2018, 11, 22));
 
-    requestOne = EntityBuilder.request(absenceAnnual, Arrays.asList(dayOne));
+    requestOne = EntityBuilder.request(absenceAnnual, List.of(dayOne));
     requestTwo = EntityBuilder.request(absenceTraining, Arrays.asList(dayTwo, dayThree));
     mockRequests = Arrays.asList(requestOne, requestTwo);
 
@@ -233,8 +235,7 @@ public class RequestServiceTest {
   public void shouldCreateRequest() {
     // given
     var user = EntityBuilder.user(EntityBuilder.team());
-    user.setId(1L);
-    var request = EntityBuilder.request(absenceTraining, Arrays.asList(dayOne));
+    var request = EntityBuilder.request(absenceTraining, List.of(dayOne));
     request.setUser(user);
     given(userRepository.getOne(1L)).willReturn(user);
     given(requestRepository.save(requestOne)).willReturn(request);
@@ -249,6 +250,7 @@ public class RequestServiceTest {
     verify(requestRepository).save(any());
     verify(googleCalendarService).handleCreatedRequest(any());
     verify(emailService).createEmailAndSendForApproval(any());
+    verify(allowanceService).applyPendingRequest(any(), anyBoolean());
     verifyNoMoreInteractions(allMocks);
   }
 
@@ -268,20 +270,25 @@ public class RequestServiceTest {
   public void shouldHandleRequestStatusUpdate() {
     // given
     var approver = EntityBuilder.approver();
+    approver.setId(2L);
+
     var user = EntityBuilder.user(EntityBuilder.team());
     user.getTeam().getTeamApprovers().add(approver);
-    var request = EntityBuilder.request(absenceAnnual, Arrays.asList(dayOne));
+
+    var request = EntityBuilder.request(absenceAnnual, List.of(dayOne));
     request.setUser(mockUser);
     request.setId(1L);
     request.setRequestStatus(RequestStatus.REJECTED);
-    requestOne.setRequestStatus(RequestStatus.REJECTED);
 
+    var databaseRequest = EntityBuilder.request(absenceAnnual, List.of(dayOne));
+
+    given(requestRepository.getOne(1L)).willReturn(databaseRequest);
     given(absenceRepository.getOne(1L)).willReturn(absenceAnnual);
-    given(userRepository.getOne(1L)).willReturn(mockUser);
+    given(userRepository.getOne(1L)).willReturn(user);
     given(requestRepository.save(request)).willReturn(request);
 
     // when
-    Request savedRequest = requestService.handleRequestStatusUpdate(requestOne, approver);
+    Request savedRequest = requestService.handleRequestStatusUpdate(request, approver);
 
     // then
     assertThat("Expect to saved request have", savedRequest.getRequestStatus(), is(RequestStatus.REJECTED));
@@ -290,6 +297,8 @@ public class RequestServiceTest {
     assertNotNull("Expect to absence exist", savedRequest.getAbsence());
     verify(absenceRepository).getOne(anyLong());
     verify(userRepository).getOne(anyLong());
+    verify(allowanceService).applyPendingRequest(any(), anyBoolean());
+    verify(requestRepository, times(3)).getOne(anyLong());
     verify(requestRepository).save(any());
     verifyNoMoreInteractions(allMocks);
   }
